[package]
name = "cat_meme"
version = "0.1.0"
authors = ["rajpar29 <rajuparlia123321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
text_io = "0.1.8"

